--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="circle">
-        
-    </div>
+    <div class="square">
+        <div class="circle">
+        </div>
+    </div>  
 </body>
 </html>
